# rust_cli_application_template

./: Cargo.toml  LICENSE  README.md  ReleaseNotes  build.sh  run.sh  test.sh
about/: Cargo.toml
about/src/: lib.rs
backend_command_example/: Cargo.toml
backend_command_example/src/: lib.rs
backend_declaration/: Cargo.toml
backend_declaration/src/: lib.rs  test_set.rs
command/: Cargo.toml
command/src/: lib.rs
convertors/: Cargo.toml
convertors/src/: lib.rs  str.rs  test_set.rs  vec_string.rs
log/: Cargo.toml
log/src/: debug.rs  error.rs  fatal.rs  info.rs  level.rs  lib.rs  rust_cli_application_template-export.json  test_set.rs  time.rs  trace.rs  warn.rs  write.rs
src/: about.rs  main.rs
